force-app/main/default/objects/DuplicateJobStatistic__c/DuplicateJobStatistic__c.object-meta.xml
<CustomObject>
    <description>Statistics about duplicate record jobs</description>
    <label>Duplicate Job Statistic</label>
    <nameField>
        <displayFormat>DJS-{0000}</displayFormat>
        <label>Statistic Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Job Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>