force-app/main/default/objects/DuplicateJobStatistic__c/fields/BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>BatchJobId__c</fullName>
    <description>ID of the batch job</description>
    <inlineHelpText>ID of the batch job</inlineHelpText>
    <label>Batch Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>