force-app/main/default/objects/DuplicateJobStatistic__c/fields/ConfigurationName__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationName__c</fullName>
    <description>Name of the duplicate configuration used</description>
    <inlineHelpText>Name of the duplicate configuration used</inlineHelpText>
    <label>Configuration Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>