force-app/main/default/objects/DuplicateJobStatistic__c/fields/ErrorMessages__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessages__c</fullName>
    <description>Error messages encountered during job execution</description>
    <inlineHelpText>Error messages encountered during job execution</inlineHelpText>
    <label>Error Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>