force-app/main/default/objects/DuplicateJobStatistic__c/fields/IsDryRun__c.field-meta.xml
<CustomField>
    <fullName>IsDryRun__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the job was a dry run (find only, no merge)</description>
    <inlineHelpText>Indicates if the job was a dry run (find only, no merge)</inlineHelpText>
    <label>Is Dry Run</label>
    <type>Checkbox</type>
</CustomField>