force-app/main/default/objects/DuplicateJobStatistic__c/fields/JobCompletionTime__c.field-meta.xml
<CustomField>
    <fullName>JobCompletionTime__c</fullName>
    <description>Date and time when the job completed</description>
    <inlineHelpText>Date and time when the job completed</inlineHelpText>
    <label>Job Completion Time</label>
    <type>DateTime</type>
</CustomField>