force-app/main/default/objects/DuplicateJobStatistic__c/fields/JobStartTime__c.field-meta.xml
<CustomField>
    <fullName>JobStartTime__c</fullName>
    <description>Date and time when the job started</description>
    <inlineHelpText>Date and time when the job started</inlineHelpText>
    <label>Job Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>