force-app/main/default/objects/DuplicateJobStatistic__c/fields/MatchScore__c.field-meta.xml
<CustomField>
    <fullName>MatchScore__c</fullName>
    <description>Average match score for duplicates found</description>
    <inlineHelpText>Average match score for duplicates found</inlineHelpText>
    <label>Match Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>