force-app/main/default/objects/DuplicateJobStatistic__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>API name of the object processed</description>
    <inlineHelpText>API name of the object processed</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>