force-app/main/default/objects/DuplicateJobStatistic__c/fields/RecordsProcessed__c.field-meta.xml
<CustomField>
    <fullName>RecordsProcessed__c</fullName>
    <description>Total number of records processed</description>
    <inlineHelpText>Total number of records processed</inlineHelpText>
    <label>Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>